# haf-ec-service

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: check.yml  nostd.yml
ec-service-lib/: Cargo.toml
ec-service-lib/src/: lib.rs  service.rs  sp_logger.rs
ec-service-lib/src/battery/: mod.rs
ec-service-lib/src/fw_mgmt/: mod.rs
ec-service-lib/src/notify/: mod.rs
ec-service-lib/src/services/: battery.rs  fw_mgmt.rs  mod.rs  notify.rs  thermal.rs
ec-service-lib/src/services/battery/: mod.rs
ec-service-lib/src/services/fw_mgmt/: mod.rs
ec-service-lib/src/services/notify/: mod.rs
ec-service-lib/src/services/thermal/: mod.rs
ec-service-lib/src/thermal/: mod.rs
ec-sp/: Cargo.toml  build.rs  memory.x
ec-sp/src/: console.rs  drivers.rs  error.rs  exception.rs  exception.s  main.rs  panic.rs  print.rs  start.s
ec-sp/src/drivers/: uart.rs
ec-sp/src/drivers/uart/: uarthyp.rs  uarthyp.s
ec-sp/src/fw_mgmt/: mod.rs
ec-sp/src/thermal/: mod.rs
embassy-aarch64-haf/: Cargo.toml
embassy-aarch64-haf/src/: critical_section.rs  executor.rs  interrupt.rs  lib.rs  time_driver.rs
espi-device/: Cargo.toml  README.md
espi-device-stub/: Cargo.toml
espi-device-stub/src/: lib.rs
espi-device/src/: config_register.rs  espi_error.rs  lib.rs  register_enum_types.rs  status_register.rs
espi-device/src/espi_types/: cycle_type.rs  mod.rs  op_code.rs
hafnium/: Cargo.toml  README.md
hafnium/src/: lib.rs
odp-ffa/: Cargo.toml  README.md
odp-ffa/src/: indirect_msg.rs  lib.rs  smc.rs  util.rs
odp-ffa/src/function/: console.rs  features.rs  id_get.rs  interrupt.rs  mem_retrieve_req.rs  mod.rs  notification_bind.rs  notification_get.rs  notification_set.rs  notification_set2.rs  rxtx.rs  version.rs  yld.rs
odp-ffa/src/function/msg/: direct_message.rs  mod.rs  msg_send2.rs  msg_send_direct_req2.rs  msg_send_direct_resp2.rs  msg_wait.rs  normal_world_resume.rs  register_payload.rs
platform/ihv1-sp/: Cargo.toml  README.md  build.rs
platform/ihv1-sp/linker/: ihv1.ld
platform/ihv1-sp/src/: exceptions.rs  main.rs
platform/ihv1-sp/src/baremetal/: interrupt.rs  mod.rs  panic.rs
platform/ihv1-sp/src/baremetal/services/: ec_memory.rs  mod.rs
platform/qemu-sp/: Cargo.toml  README.md  build.rs  deny.toml
platform/qemu-sp/linker/: image.ld  qemu-ec-sp.dts  qemu.ld
platform/qemu-sp/src/: main.rs
platform/qemu-sp/src/baremetal/: battery.rs  interrupt.rs  mod.rs  panic.rs
platform/tiete-sp/: Cargo.toml  build.rs
platform/tiete-sp/linker/: .tiete.ld.swp  image.ld  tiete-sp.dts  tiete.ld
platform/tiete-sp/src/: main.rs
platform/tiete-sp/src/baremetal/: interrupt.rs  panic.rs
src/: lib.rs
src/fw_mgmt/: mod.rs
supply-chain/: config.toml
xtask/: Cargo.toml
xtask/src/: cargo.rs  lib.rs  main.rs  objcopy.rs  package.rs  qemu.rs
