[workspace]
resolver = "2"
members = ["ec-service-lib", "platform/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ffa = { git = "https://github.com/OpenDevicePartnership/ffa", rev = "1f6ef264" }
ec-service-lib = { path = "ec-service-lib" }
aarch64-rt = { version = "0.1.0", default-features = false, features = [
    "el1",
    "exceptions",
] }
aarch64-paging = { version = "0.8.1", default-features = false }
aarch64-cpu = "10.0.0"
uuid = { version = "1.0", default-features = false, features = ["v1"] }
log = { version = "0.4", default-features = false }
