[workspace]
resolver = "2"
members = [
    "odp-ffa",
    "ec-service-lib",
    "espi-device",
    "espi-device-stub",
    "platform/ihv1-sp",
    "platform/qemu-sp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
aarch64-cpu = "10.0.0"
aarch64-paging = { version = "0.10.0", default-features = false }
aarch64-rt = { version = "0.2.2", default-features = false, features = [
    "el1",
    "exceptions",
] }
bit-register = { git = "https://github.com/OpenDevicePartnership/odp-utilities" }
critical-section = { version = "1.1.0", default-features = false }
debug-non-default = { git = "https://github.com/OpenDevicePartnership/odp-utilities" }
ec-service-lib = { path = "ec-service-lib" }
embassy-aarch64-haf = { path = "embassy-aarch64-haf" }
embassy-executor = { version = "0.9.1" }
embassy-futures = { version = "0.1.2" }
embassy-hal-internal = { version = "0.3.0" }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0" }
embassy-time-driver = { version = "0.2.1" }
embassy-time-queue-utils = { version = "0.3.0" }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }
espi-device = { path = "espi-device" }
espi-device-stub = { path = "espi-device-stub" }
odp-ffa = { path = "odp-ffa" }
hafnium = { path = "hafnium" }
heapless = "0.9.1"
log = { version = "0.4", default-features = false }
mockall = "0.13.1"
num_enum = { version = "0.7.3", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
subenum = { version = "1.1.2", default-features = false }
uuid = { version = "1.0", default-features = false, features = ["v1"] }
rstest = "0.26.1"

[workspace.lints.clippy]
suspicious = "forbid"
correctness = "forbid"
perf = "forbid"
style = "forbid"


[profile.release]
opt-level = 's'
lto = "fat"
codegen-units = 1
strip = false
debug = true
