[package]
name = "ec-sp"
license = "MIT"
authors.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aarch64-cpu.workspace = true
ffa.workspace = true
uuid = { version = "1.0", default-features = false, features = ["v1"] }