[package]
name = "embassy-aarch64-haf"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Dylan Knutson <dylanknutson@microsoft.com>"]
description = "AArch64 HAL for Embassy"

[dependencies]
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-time-driver = { workspace = true, optional = true }
embassy-time-queue-utils.workspace = true
aarch64-cpu.workspace = true
critical-section = { workspace = true, features = ["restore-state-u64"] }
log.workspace = true
hafnium.workspace = true
odp-ffa.workspace = true

[features]
default = []
time-driver = ["dep:embassy-time-driver"]
