[package]
name = "xtask"
authors.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
lzma-rs = "0.3.0"
reqwest = "0.11.26"
tar = "0.4.40"
tokio = { version = "1.36.0", features = ["full"] }
