[package]
name = "qemu-ec-sp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "QEMU Embedded Controller Secure Partition Service"
authors = ["Phil Weber <philweber@microsoft.com>"]
repository = "https://github.com/"
keywords = ["arm", "aarch64", "cortex-a", "osdev"]
categories = ["embedded", "no-std"]

[dependencies]
aarch64-rt = { version = "0.1.0", default-features = false, features = ["el1", "exceptions"] }
aarch64-paging = { version = "0.8.1", default-features = false }
aarch64-cpu = "10.0.0"
ffa = { git = "https://github.com/OpenDevicePartnership/ffa" }
haf_ec_service = { path = "../.." }
