[package]
name = "qemu-ec-sp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "QEMU Embedded Controller Secure Partition Service"
authors = ["Phil Weber <philweber@microsoft.com>"]
repository = "https://github.com/"
keywords = ["arm", "aarch64", "cortex-a", "osdev"]
categories = ["embedded", "no-std"]

[features]
default = []
baremetal = ["aarch64-rt", "aarch64-paging", "aarch64-cpu"]

[target.'cfg(target_os = "none")'.dependencies]
aarch64-rt.workspace = true
aarch64-paging.workspace = true
aarch64-cpu.workspace = true

[dependencies]
ffa.workspace = true
ec-service-lib.workspace = true
aarch64-rt = { workspace = true, optional = true }
aarch64-paging = { workspace = true, optional = true }
aarch64-cpu = { workspace = true, optional = true }
log.workspace = true
