[package]
name = "qemu-ec-sp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "QEMU Embedded Controller Secure Partition Service"
authors = ["Phil Weber <philweber@microsoft.com>"]
repository = "https://github.com/"
keywords = ["arm", "aarch64", "cortex-a", "osdev"]
categories = ["embedded", "no-std"]

[features]
default = []

[target.'cfg(target_os = "none")'.dependencies]
aarch64-rt.workspace = true
aarch64-paging.workspace = true
aarch64-cpu.workspace = true
embassy-aarch64-haf.workspace = true
hafnium.workspace = true

[dependencies]
odp-ffa.workspace = true
ec-service-lib.workspace = true
aarch64-rt = { workspace = true, optional = true }
aarch64-paging = { workspace = true, optional = true }
aarch64-cpu = { workspace = true, optional = true }
embassy-aarch64-haf = { workspace = true, optional = true }
hafnium = { workspace = true, optional = true }
log.workspace = true
embassy-executor.workspace = true
embassy-sync.workspace = true
uuid.workspace = true


[build-dependencies]
chrono = "0.4"
